--- a/ItAcademy/appsettings.json
+++ b/ItAcademy/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "WebApiDatabase": "Server=DESKTOP-CS0U3R6;Database=NewsDb;Trusted_Connection=True;TrustServerCertificate=True;"
+  }
 }
